<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/po"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/textOlimpo"
        android:layout_width="387dp"
        android:layout_height="87dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="serif"
        android:gravity="center_horizontal"
        android:shadowColor="@android:color/black"
        android:shadowDx="8"
        android:shadowDy="8"
        android:shadowRadius="20"
        android:text="@string/textOlimpo"
        android:textColor="@android:color/black"
        android:textSize="60sp"
        android:textStyle="bold"
        android:background="@drawable/cuadrodetexto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/botoninicial"
        android:layout_width="243dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/black"
        android:padding="10dp"
        android:text="@string/nosotros"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63" />


    <Button
        android:id="@+id/button3"
        android:layout_width="238dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/black"
        android:padding="10dp"
        android:text="@string/button3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.733" />

    <Button
        android:id="@+id/button2"
        android:layout_width="238dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/black"
        android:padding="10dp"
        android:text="@string/button2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.844" />


    <Button
        android:id="@+id/buttonconsulta"
        android:layout_width="238dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/black"
        android:padding="10dp"
        android:text="Consultar reservas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.952" />

</androidx.constraintlayout.widget.ConstraintLayout>
